# DATA607W2025

./: .gitignore  README.md  __pyrightconfig.json  assignment1-lastname-firstname-studentid.ipynb  assignment2-lastname-firstname-studentid.ipynb  assignment3-lastname-firstname-studentid.ipynb  energy.ipynb  lecture01-live.ipynb  lecture01.ipynb  lecture02.ipynb  lecture03.ipynb  lecture04.ipynb  lecture04.md  lecture05.ipynb  lecture06.ipynb  lecture07-scratch.ipynb  lecture07.ipynb  lecture08-scratch-2.ipynb  lecture08-scratch.ipynb  lecture08.ipynb  lecture09.ipynb  lecture10.ipynb  main.py  pyproject.toml  rossmann-features.ipynb  school_holidays.csv  state_holidays.csv  stores.csv
data/: 2024CFLScores.csv  2024CFLSeasonScheduleAnsScores.html  AirQualityUCIPreprocessed.csv  Default.csv  Smarket.csv  assignment1-classification.csv  auto_preprocessed.csv  enroll.csv  enrollment.csv  rossmann_train.parquet  wage_preprocessed.csv
scratch/: feature_selection.ipynb
