[project]
name = "data607w2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.9.6",
    "ipykernel",
    "ipywidgets",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "cmdstanpy",
    "pyyaml",
    "nbformat",
    "nbclient",
    "kaggle>=1.6.17",
    "bs4>=0.0.2",
    "icecream>=2.1.4",
    "sentence-transformers>=3.4.1",
]

[tool.pyright]
ignore = ["**/notebooks", "**/*.ipynb"] # working
exclude = ["**/notebooks", "**/*.ipynb"] # working
reportAttributeAccess = "none"
