[project]
name = "data607w2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.9.6",
    "ipykernel",
    "ipywidgets",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "cmdstanpy",
    "pyyaml",
    "nbformat",
    "nbclient",
    "kaggle>=1.6.17",
    "bs4>=0.0.2",
    "icecream>=2.1.4",
    "sentence-transformers>=3.4.1",
    "nbconvert>=7.16.6",
    "kagglehub>=0.3.10",
    "mlflow>=2.20.4",
    "xgboost>=3.0.0",
    "lightgbm>=4.6.0",
]

[tool.pyright]
ignore = ["**/notebooks", "**/*.ipynb"] # working
exclude = ["**/notebooks", "**/*.ipynb"] # working
reportAttributeAccess = "none"
